--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "test-component",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "test component",
   "scripts": {
     "test": "./node_modules/.bin/jsxhint lib/ spec/ && ./node_modules/.bin/jshint lib/ spec/ && ./node_modules/karma/bin/karma start karma.conf.js",
     "watch-test": "./node_modules/karma/bin/karma start karma.conf.js --auto-watch --no-single-run",
     "build": "./node_modules/.bin/webpack -p",
-    "rename-css-bower-dependencies": "find bower_components -name '*.css' | sed -e 'p;s/.css$/.scss/' | xargs -n2 mv",
-    "dev": "./node_modules/.bin/webpack-dev-server --inline --hot",
-    "postinstall": "bower install"
+    "dev": "./node_modules/.bin/webpack-dev-server --inline --hot"
   },
+  "main": "./lib/index.js",
   "author": "",
-  "license": "BSD",
   "devDependencies": {
     "css-loader": "^0.9.1",
     "es5-shim": "^4.1.0",
